--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "puppeteer": "^19.8.5"
+  },
+  "devDependencies": {
+    "prettier": "2.8.7"
   }
 }
